debug with new drag and drop system

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6756,16 +6756,26 @@ body {
   color: #000;
   font-size: 1em; }
 
-#my-awesome-dropzone {
+input {
+  opacity: 0; }
+
+.drop-files-container {
   height: 100%;
-  z-index: 999; }
-  #my-awesome-dropzone input {
-    display: none; }
-  #my-awesome-dropzone div {
-    display: none; }
+  width: 100%;
+  position: fixed; }
 
 .medias-list li {
   top: 0;
   left: 0;
   width: 20%;
-  position: absolute; }
+  position: absolute;
+  display: none; }
+
+.ligne {
+  width: 1px;
+  border-left: 2px dashed #000;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 50%;
+  z-index: 0; }
