--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -23,30 +23,34 @@ body {
   color: #000;
   font-size: 1em;
 }
+input{
+	opacity:0;
+}
 
-#my-awesome-dropzone{
+.drop-files-container{
 	height:100%;
-	z-index:999;
-	// position:fixed;
-	// top:0;
-	// left:0;
-	input{
-		display:none;
-	}
-	div{
-		display:none;
-	}
+	width:100%;
+	position:fixed;
 }
 
 .medias-list{
-	//pointer-events:none;
 	li{
-		//pointer-events:none;
 		top:0;
 		left:0;
 		width:20%;
 		position: absolute;
+		display:none;
 	}
+}
+
+.ligne{
+	width: 1px;
+	border-left: 2px dashed #000;
+	height:100%;
+	position:fixed;
+	top:0;
+	left:50%;
+	z-index:0;
 }
 
 
