--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -40,6 +40,9 @@ input{
 		width:20%;
 		position: absolute;
 		display:none;
+		img, video{
+			width: 100%;
+		}
 	}
 }
 
@@ -51,6 +54,10 @@ input{
 	top:0;
 	left:50%;
 	z-index:0;
+}
+
+.js--templates{
+	display:none;
 }
 
 
