--- a/views/index.jade
+++ b/views/index.jade
@@ -19,6 +19,11 @@ html
     .js--templates
       li.image
         img
+      li.video
+        video(controls)
+          source()
+      li.pdf
+        a
 
 
     script(src='/socket.io/socket.io.js')
