--- a/views/index.jade
+++ b/views/index.jade
@@ -16,6 +16,12 @@ html
 
     .ligne
 
+    .titre
+      h1 Baking Projects
+      h2 Angeline Ostinelli & Sarah Garcin
+    .elif
+      h3 elif - 29-30 mars 2016
+
     .js--templates
       li.image
         img
