--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6742,11 +6742,26 @@ th.hide-for-touch {
   th.show-for-print {
     display: table-cell !important; } }
 
+@font-face {
+  font-family: 'nanook';
+  src: url("../fonts/nanook_bold-webfont.eot");
+  src: url("../fonts/nanook_bold-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/nanook_bold-webfont.woff2") format("woff2"), url("../fonts/nanook_bold-webfont.woff") format("woff"), url("../fonts/nanook_bold-webfont.ttf") format("truetype"), url("../fonts/nanook_bold-webfont.svg#nanookbold") format("svg");
+  font-weight: bold;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'nanook';
+  src: url("../fonts/nanook-webfont.eot");
+  src: url("../fonts/nanook-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/nanook-webfont.woff2") format("woff2"), url("../fonts/nanook-webfont.woff") format("woff"), url("../fonts/nanook-webfont.ttf") format("truetype"), url("../fonts/nanook-webfont.svg#nanookregular") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+
 html {
   margin: 0; }
 
 body, html {
-  height: 100%; }
+  height: 100%;
+  font-family: 'nanook', serif; }
 
 li {
   list-style: none; }
@@ -6775,12 +6790,33 @@ input {
 
 .ligne {
   width: 1px;
-  border-left: 2px dashed #000;
+  border-left: 1px dashed #A19C9F;
   height: 100%;
   position: fixed;
   top: 0;
   left: 50%;
   z-index: 0; }
+
+.titre {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateY(-50%);
+  transform: translateX(-50%); }
+  .titre h1 {
+    text-transform: uppercase;
+    font-size: 6em; }
+  .titre h1, .titre h2, .titre h3 {
+    text-align: center;
+    font-family: 'nanook', serif; }
+
+.elif {
+  position: absolute;
+  top: 10px;
+  right: 10px; }
+  .elif h3 {
+    text-align: center;
+    font-family: 'nanook', serif; }
 
 .js--templates {
   display: none; }
