--- a/views/index.jade
+++ b/views/index.jade
@@ -17,10 +17,12 @@ html
     .ligne
 
     .titre
-      h1 Baking Projects
-      h2 Angeline Ostinelli & Sarah Garcin
+      .titre-wrapper
+        h1 Baking 
+        h1 Projects
     .elif
       h3 elif - 29-30 mars 2016
+      h3 Angeline Ostinelli & Sarah Garcin
 
     .js--templates
       li.image
