--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -23,6 +23,7 @@ body {
   margin: 0;
   color: #000;
   font-size: 1em;
+  overflow:hidden;
 }
 input{
 	opacity:0;
@@ -41,6 +42,12 @@ input{
 		width:20%;
 		position: absolute;
 		display:none;
+		&[data-orientation="paysage"]{
+			width: 40%;
+		}
+		&[data-orientation="portrait"]{
+			width: 25%;
+		}
 		img, video{
 			width: 100%;
 		}
@@ -58,14 +65,18 @@ input{
 }
 
 .titre{
-	position: absolute;
-	top: 50%;
-	left:50%;
-	transform: translateY(-50%);
-	transform: translateX(-50%);
-	h1{
-		text-transform: uppercase;
-		font-size: 6em;
+	position:relative;
+	top:70%;
+	.titre-wrapper{
+		margin:auto;
+		text-align:center;
+		h1{
+			text-transform: uppercase;
+			font-size: 6em;
+			display:inline-block;
+			vertical-align: top;
+			width: 50%;
+		}
 	}
 	h1,h2,h3{
 		text-align:center;
@@ -77,8 +88,8 @@ input{
 	position: absolute;
 	top: 10px;
 	right:10px;
-	h3{
-	text-align:center;
+	h2, h3{
+	text-align:right;
 	font-family: 'nanook', serif;
 	}
 }
