--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3673,16 +3673,16 @@ kbd {
     background-color: #a0d3e8;
     color: #333333; }
 
-"[data-magellan-expedition]", [data-magellan-expedition-clone] {
+[data-magellan-expedition], [data-magellan-expedition-clone] {
   background: #FFFFFF;
   min-width: 100%;
   padding: 10px;
   z-index: 50; }
-  "[data-magellan-expedition]" .sub-nav, [data-magellan-expedition-clone] .sub-nav {
+  [data-magellan-expedition] .sub-nav, [data-magellan-expedition-clone] .sub-nav {
     margin-bottom: 0; }
-    "[data-magellan-expedition]" .sub-nav dd, [data-magellan-expedition-clone] .sub-nav dd {
+    [data-magellan-expedition] .sub-nav dd, [data-magellan-expedition-clone] .sub-nav dd {
       margin-bottom: 0; }
-    "[data-magellan-expedition]" .sub-nav a, [data-magellan-expedition-clone] .sub-nav a {
+    [data-magellan-expedition] .sub-nav a, [data-magellan-expedition-clone] .sub-nav a {
       line-height: 1.8em; }
 
 @-webkit-keyframes rotate {
@@ -6771,9 +6771,6 @@ body {
   color: #000;
   font-size: 1em;
   overflow: hidden; }
-
-input {
-  opacity: 0; }
 
 .drop-files-container {
   height: 100%;
