--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -1,5 +1,3 @@
-
-
 // I M P O R T
 @import "../bower_components/foundation/scss/normalize";
 @import "../bower_components/foundation/scss/foundation";
@@ -26,7 +24,7 @@ body {
   overflow:hidden;
 }
 input{
-	opacity:0;
+	// opacity:0;
 }
 
 .drop-files-container{
