--- a/views/index.jade
+++ b/views/index.jade
@@ -1,45 +1,36 @@
 doctype html
 html
-  head
-    link(rel='stylesheet', href='/css/style.css')
-    title #{title}
+  include snippets/head.jade
   body
 
-    .drop-files-container
-
-    form(enctype="multipart/form-data" id="form")
-     input(type="file" name="files[]" multiple="multiple")
-
-
-    .medias-list
-      ul
-
-    .ligne
-
-    .titre
-      .titre-wrapper
-        h1 Baking 
-        h1 Projects
-    .elif
-      h3 elif - 29 mars 2016
-      h3 Angeline Ostinelli & Sarah Garcin
+    div.container
+      div.row
+        div.left.large-6.columns
+          div.text
+        div.right.large-6.columns
+          div.add-new-conf-wrapper
+            form(onsubmit='return false;' class='add-new-conf-form')
+              input(type="text" class="lieu" placeholder='Lieu')
+              input(type="date" class="date" placeholder='Date')
+              input(type="text" class="titre" placeholder='Titre')
+              input(type="text" class="auteur" placeholder='Auteur(s)')
+              input(type='submit' class='js-add-conf' value='Ajouter une nouvelle conférence')
+          ul.dossier-list
 
     .js--templates
-      li.image
-        img
-      li.video
-        video(controls)
-          source()
-      li.pdf
-        a
+      li.dossier.small-6.medium-4.large-4.columns(data-nom)
+        .dossier-inside
+          .content
+            a.folder-link(href title)
+              h2.title
+          .meta-data.row
+            .lieu
+            .date
+            .auteur
 
 
-    script(src='/socket.io/socket.io.js')
-    script(src='/bower_components/jquery/dist/jquery.min.js')
-    script(src='/bower_components/jquery-ui/jquery-ui.min.js')
-    script(src='/js/libs/jquery.ui.touch-punch.min.js')
-    script(src='/bower_components/foundation/js/foundation.min.js')
-
+    include snippets/footer.jade
+    //- specific scripts
     script(src='/js/index.js')
 
 
